0.13.2.AN (Pre-Release):
-----------------------
- Fixes Major Memory Conflict
  * An item had been wrongly freed resulting in random crashes when running loaders
  * This bug was introduced in v0.13.2.AC (Commit 6ed58c5)
- Fixes 'DontScanVolumes' for Synced APFS Instances
  * Limited to Single Instance APFS Containers
- Fixes Reported LodePNG Name Collisions
    * Apparently affected Docker builds on Linux
- Improves 'ProtectNVRAM' Implementation
  * RefindPlus classifies UEFI Loaders into one of the following categories:
    - "Opencore", "Clover", "Linux", "MacOS", "Windows" and "Others"
  * Only security cetificates generated by Windows UEFI Loaders were blocked by 'ProtectNVRAM'
  * However, UEFI WIndows installers/Updaters may fall into the 'Others' category and generate such certificates
  * Hence, certificates generated by UEFI Loaders that fall into the 'Others' category are now also blocked
  * The 'ProtectNVRAM' feature mains only active on Apple firmware
- Improves Memory Management
  * Multiple memory management improvements
- Multiple Misc Stability Fixes
  * Major refactoring and restructuring for optimisation

0.13.2.AM (13 Dec 2021):
-----------------------
- Reverts Ported APFS Volume Group Identification
  * Does not appear the Volume Group information was correctly isolated and hence, not unique
  * Results in MacOS volume instance conflicts
  * NOTE: Multi Instance APFS Container restrictions apply again


0.13.2.AL (12 Dec 2021):
-----------------------
- Adds "ExternalHiddenIcons" Feature
  * Sets RefindPlus to also scan external volumes for ".VolumeIcon" icons
  * This is a port of the downstream "AllHiddenIcons" feature by GitHub user @Joevt
  * Amended and renamed to reflect the target disk kind
- Improves "ScreenRGB" Feature
  * The handling of the embedded title banner has been improved by leveraging transparency
  * This significantly reduces the overall file size and ensures backgrounds are fully matched